@@ -92,6 +92,9 @@ Set multicast output interface.
 \fB\-t\fR, \fB\-\-output\-ttl\fR
 Set multicast ttl. The default value is \fB1\fR.
 .TP
+\fB\-g\fR, \fB\-\-output\-tos\fR
+Set TOS value of output packets. The default is not to set any specific TOS.
+.TP
 \fB\-p\fR, \fB\-\-no\-output\-filter\fR
 Disable output filtering. By default the output filter is enabled and only
 PAT/PMT/SDT and data packets are left in the output. Everything else not
